# rainwatch-kh

./: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  skills-lock.json  vite.config.landing.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: pages.yml  release.yml
landing/: index.html  tsconfig.json
landing/src/: App.tsx  main.tsx  theme.ts
renderer/: index.html  tsconfig.json
renderer/src/: App.tsx  global.d.ts  index.css  main.tsx  theme.ts
renderer/src/components/: AppMenu.tsx  CalibrationPanel.tsx  EmptyState.tsx  MapView.tsx  SliderControl.tsx  StatusBar.tsx  TimeRuler.tsx  Timeline.tsx
renderer/src/hooks/: useForecastGrid.ts  useIdleTimer.ts  usePlayback.ts  useProvincialCapitals.ts  useRadarFrames.ts  useRadarMap.ts  useRuntimeConfig.ts
renderer/src/lib/: basemaps.ts  calibration.ts  cambodia-grid.ts  cambodia-provinces.ts  domains.ts  forecast-grid.ts  format.ts  frame-time.ts  (+14 more)
scripts/: build-grid.mjs
src/: basemaps.js  domains.js  flags.js  index.html  main.js  map-config.js  parser.js  preload.js  renderer.js  scheduler.js  styles.css  terrain.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cambodia_grid.rs  domains.rs  forecast_grid.rs  http.rs  lib.rs  main.rs  provincial_capitals.rs  radar.rs
tests/: basemaps.test.js  calibration.test.js  csp.test.js  domains.test.js  flags.test.js  forecast-grid.test.js  frame-time.test.js  idle-timer.test.js  parser.test.js  scheduler.test.js  terrain.test.js
